--- a/css/common.css
+++ b/css/common.css
@@ -137,3 +137,42 @@ input + h1 {
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
+
+.login-form {
+  display: flex;
+  align-items: flex-start;
+
+  flex-direction: column;
+  gap: 8px;
+  input {
+    margin-bottom: 0;
+  }
+}
+
+.login-form label:nth-last-child(2) {
+  margin-bottom: 8px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+form button {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: 0;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background-color: #4e75ff;
+}
