--- a/css/common.css
+++ b/css/common.css
@@ -49,7 +49,6 @@ img {
   width: 392px;
 }
 .item > h2 {
-  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 1.33333;
@@ -70,7 +69,7 @@ img {
   font-size: 16px;
   letter-spacing: 0.04em;
   color: #2e2f42;
-  font-family: 'Montserrat', sans-serif;
+
   border: 1px solid #808080;
   border-radius: 4px;
   height: 40px;
@@ -107,14 +106,13 @@ input {
   height: 40px;
   padding-left: 16px;
   margin-bottom: 16px;
-  font-family: 'Montserrat', sans-serif;
+
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
 
 input::placeholder {
-  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -122,7 +120,6 @@ input::placeholder {
 }
 
 input:focus {
-  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -130,7 +127,6 @@ input:focus {
 }
 
 input + h1 {
-  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 1.33333;
@@ -157,13 +153,12 @@ label {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  font-family: 'Montserrat', sans-serif;
+
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
 
-form button {
-  font-family: 'Montserrat', sans-serif;
+button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -172,7 +167,17 @@ form button {
   border: 0;
   border-radius: 8px;
   padding: 8px 16px;
-  width: 86px;
   height: 40px;
   background-color: #4e75ff;
+}
+
+.widget {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
